ENVOY/envoy.json
{
  "static_resources": {
    "listeners": [
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8080
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "codec_type": "AUTO",
                  "stat_prefix": "ingress_http",
                  "route_config": {
                    "name": "local_route",
                    "virtual_hosts": [
                      {
                        "name": "api",
                        "domains": [
                          "k8s-flask-api-envoy-proxy.local.com"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "flask-api"
                            }
                          }
                        ]
                      },
                      {
                        "name": "fe",
                        "domains": [
                          "k8s-flask-fe-envoy-proxy.local.com"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "flask-fe"
                            }
                          }
                        ]
                      },
                      {
                        "name": "kibana",
                        "domains": [
                          "k8s-kibana-envoy-proxy.local.com"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "kibana"
                            }
                          }
                        ]
                      },
                      {
                        "name": "es",
                        "domains": [
                          "k8s-es-envoy-proxy.local.com"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "elasticsearch"
                            }
                          }
                        ]
                      },
                      {
                        "name": "backend",
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "flask-fe"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                      }
                    }
                  ]
                }
              }
            ]
          }
        ]
      }
    ],
    "clusters": [
      {
        "name": "flask-fe",
        "type": "STRICT_DNS",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "flask-fe",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "flask-fe",
                        "port_value": 8080
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      },
      {
        "name": "flask-api",
        "type": "STRICT_DNS",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "flask-api",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "flask-api",
                        "port_value": 8080
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      },
      {
        "name": "kibana",
        "type": "STRICT_DNS",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "kibana",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "kibana",
                        "port_value": 5601
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      },
      {
        "name": "elasticsearch",
        "type": "STRICT_DNS",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "elasticsearch",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "elasticsearch",
                        "port_value": 9200
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      }
    ]
  },
  "admin": {
    "address": {
      "socket_address": {
        "address": "0.0.0.0",
        "port_value": 8001
      }
    }
  },
  "layered_runtime": {
    "layers": [
      {
        "name": "static_layer_0",
        "static_layer": {
          "envoy": {
            "resource_limits": {
              "listener": {
                "example_listener_name": {
                  "connection_limit": 10000
                }
              }
            }
          }
        }
      }
    ]
  }
}
