ENVOY/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-envoy
  namespace: demo
  labels:
    environment: dev
    tier: frontend
    project: demo
spec:
  type: NodePort
  selector:
        app: edge-envoy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30003
